tests/ui/panic-handler/weak-lang-item.stderr
error[E0259]: the name `core` is defined multiple times
  --> $DIR/weak-lang-item.rs:7:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^ `core` reimported here
   |
   = note: `core` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate core as other_core;
   |                   +++++++++++++

error: unwinding panics are not supported without std
   |
   = help: using nightly cargo, use -Zbuild-std with panic="abort" to avoid unwinding
   = note: since the core library is usually precompiled with panic="unwind", rebuilding your crate with panic="abort" may not be enough to fix the problem

error: `#[panic_handler]` required, but not found
  --> $SRC_DIR/core/src/panic.rs:LL:COL
   |
   = note: expected because `#[panic_handler]` was declared here in crate `core`
   |
   = help: expected at least one implementation in crate `weak_lang_item` or any of its dependencies

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0259`.
